<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/info"
            android:iconTint="@color/white"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_policy"
            android:icon="@drawable/policy"
            android:title="@string/privacy_policy" />
        <item
            android:id="@+id/nav_my_downloads"
            android:icon="@drawable/downloads"
            android:title="@string/my_downloads" />
        <item
            android:id="@+id/nav_change_password"
            android:icon="@drawable/passward"
            android:title="@string/change_password" />
        <item
            android:id="@+id/nav_discover_people"
            android:icon="@drawable/discover_ppl"
            android:title="@string/discover_people" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>
</menu>